# alerts-in-ua-py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
alerts_in_ua/: __init__.py  air_raid_alert_oblast_status.py  air_raid_alert_status.py  air_raid_alert_status_resolver.py  air_raid_alert_statuses.py  alert.py  alerts.py  async_client.py  client.py  errors.py  location_resolver.py  location_uid_resolver.py  ua_date_parser.py  user_agent.py
alerts_in_ua.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alerts_in_ua_/: __init__.py  alert.py  alerts.py  client.py  errors.py  location_resolver.py  ua_date_parser.py  user_agent.py
tests/: dict_bench.py  test_dict_bench.py  test_fetch.py  test_parse_oblast_status.py
